--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,8 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  flutter_hooks: ^0.18.0
+  # flutter_hooks: ^0.18.0
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
