--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,12 +13,26 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   # flutter_hooks: ^0.18.0
-  provider: ^6.0.0
+  # provider: ^6.0.0
+  # riverpod: ^0.14.0+3
+  # flutter_riverpod: ^0.14.0+3
+  flutter_riverpod:
+    git:
+      url: https://github.com/rrousselGit/river_pod.git
+      ref: 147be70df096015af0633456a951d8f2f9c66dc9
+      path: packages/flutter_riverpod
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
+
+dependency_overrides:
+  riverpod:
+    git:
+      url: https://github.com/rrousselGit/river_pod.git
+      ref: 147be70df096015af0633456a951d8f2f9c66dc9
+      path: packages/riverpod
 
 flutter:
   uses-material-design: true
